--- a/contatos.html
+++ b/contatos.html
@@ -44,7 +44,6 @@
       <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
-      <!-- <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS <i class="fas fa-angle-down downArrow"></i></li></a> -->
       <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
       <a href="#"><li class="menuText" id="op5">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
@@ -67,7 +66,10 @@
     <br>
     <p class="tittleContacts">ONDE NOS ENCONTRAR</p>
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.4921028230037!2d-8.793348985281035!3d39.16353213881896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd18e887f966c3b3%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1sen!2spt!4v1621948598577!5m2!1sen!2spt" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.4921028230037!2d-8.793348985281035!3d39.16353213881896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd18e887f966c3b3%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1sen!2spt!4v1621948598577!5m2!1sen!2spt" width="80%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    
     <br>
     <br>
     <p class="tittleContacts">FALE CONNOSCO</p>
