--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <a href="marcas.html"><li class="menuTextScrollD">MARCAS</li></a>
           <a href="associados.html"><li class="menuTextScrollD">ASSOCIADOS</li></a>
         </ul>
-        <div class="searchBarnMGB">
-          <input type="text" class="searchBarB" id="searchBarB" placeholder="Procurar...">
-          <a onclick="" id="searchMGSearchB"><i class="fas fa-search searchMGSearchB"></i></a>
+        <div class="searchBarnMGScrollD">
+          <input type="text" class="searchBarScrollD" id="searchBarScrollD" placeholder="Procurar...">
+          <a onclick="" id="searchMGSearchScrollD"><i class="fas fa-search searchMGSearchScrollD"></i></a>
         </div>
   </nav> 
   <!-- Search Bar-->
