--- a/index.html
+++ b/index.html
@@ -157,136 +157,136 @@
       <div class="marcas">
         <a href="" >
           <div class="marca">
-            <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/agrolex.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/sirosubs.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/belchim.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/nutrofertil.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/biona.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/cadubal.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/deiba.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/lena.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/einhell.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/epagro.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/fertiprado.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/fito.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/iqv.png">
           </div>
         </a><!--End carousel-->
         <!--Double Brands-->
         <a href="" >
           <div class="marca">
-            <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/agrolex.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/sirosubs.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/belchim.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/nutrofertil.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/biona.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/cadubal.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/deiba.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/lena.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/einhell.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/epagro.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/fertiprado.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/fito.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+            <img src="Images/marcas/iqv.png">
           </div>
-        </a><!--End carousel-->
-      </div>
+        </a>
+      </div><!--End carousel-->
     </div><!--End-->
   </div><!--/Main-->
 </body>
