--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="JS/script.js"></script>
       <title>Lavricartaxo</title>
   </head>
-<body onload="slideshow()" onresize="resize()">
+<body onload="slideshow()" onresize="resize()" onscroll="scrollFunction()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
       <div class="logo"> <!--Div logo-->
@@ -66,14 +66,14 @@
         </div>
   </nav> 
   <!-- Search Bar-->
-  <div class="search" id="search">
+  <!-- <div class="search" id="search">
     <a onclick="openSearchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
     <div class="searchBarnMG">
       <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
       <a onclick="" id="searchMGSearch"><i class="fas fa-search searchMGSearch"></i></a>
     </div>
     <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
-  </div>
+  </div> -->
   <!--End Search Bar -->
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
