--- a/associados.html
+++ b/associados.html
@@ -17,80 +17,58 @@
   <title>Lavricartaxo</title>
 </head>
 
-<body onresize="resize()">
-  <div class="header">
-    <!--Header-->
-    <div class="top">
-      <!--Header Subsection Top-->
-      <div class="logo">
-        <!--Div logo-->
-        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a>
-        <!--Logo Lavricartaxo-->
+<body onresize="resize()"  onscroll="scrollFunction()">
+  <div class="header"> <!--Header-->
+    <div class="top"> <!--Header Subsection Top-->
+      <div class="logo"> <!--Div logo-->
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> <!--Logo Lavricartaxo-->
       </div>
-      <div class="weatherWidget">
-        <!--Div weather widget PC-->
-        <div id="weatherWidget">
-          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-          <!--Weather width PC-->
-        </div>
-      </div>
-      <div class="weatherWidgetTablet">
-        <!--Div weather widget Tablet-->
+      <div class="weatherWidget"> <!--Div weather widget PC-->
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script> <!--Weather width PC-->
+        </div> 
+      </div>  
+      <div class="weatherWidgetTablet"> <!--Div weather widget Tablet-->
         <div id="weatherWidgetTablet">
-          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
-          <!--Weather width Tablet-->
+          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script> <!--Weather width Tablet-->
         </div>
-      </div>
-      <div class="weatherWidgetPhone">
-        <!--Div weather widget Phone-->
+      </div>   
+      <div class="weatherWidgetPhone"> <!--Div weather widget Phone-->
         <div id="weatherWidgetPhone">
-          <script type="text/javascript" async src="JS/weatherWidgetPhone.js"></script>
-          <!--Weather width Phone-->
+          <script type="text/javascript" async src="JS/weatherWidgetPhone.js"></script> <!--Weather width Phone-->
         </div>
-      </div>
-    </div>
+      </div>          
+    </div>    
   </div>
-  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-bars"></i></button>
-  <!--Top Button Phone Mode-->
-  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button>
-  <!--Top Button Phone Mode-->
-  <nav id="nav">
-    <ul class="navMenu">
-      <!--Menu-->
-      <a href="index.html">
-        <li class="menuText" id="op1">INICIO</li>
-      </a>
-      <a href="quemsomos.html">
-        <li class="menuText" id="op2">QUEM SOMOS</li>
-      </a>
-      <a href="galeria.html">
-        <li class="menuText" id="op3">GALERIA</li>
-      </a>
-      <a href="produtos.html">
-        <li class="menuText" id="op4">PRODUTOS</li>
-      </a>
-      <a href="contatos.html">
-        <li class="menuText" id="op5">CONTATOS</li>
-      </a>
-      <a href="marcas.html">
-        <li class="menuText" id="op6">MARCAS</li>
-      </a>
-      <a href="#">
-        <li class="menuText" id="op7">ASSOCIADOS</li>
-      </a>
+  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-bars"></i></button> <!--Top Button Phone Mode-->
+  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Top Button Phone Mode-->
+  <nav id="nav" class="nav">
+    <ul class="navMenu"> <!--Menu-->
+      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
+      <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
+      <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
+      <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
+      <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
-  <!-- Search Bar-->
-  <div class="search" id="search">
-    <a onclick="openSearchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
-    <div class="searchBarnMG">
-      <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
-      <a onclick="" id="searchMGSearch"><i class="fas fa-search searchMGSearch"></i></a>
-    </div>
-    <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
-  </div>
-  <!--End Search Bar -->
-  <div class="backgroundIMG">
+  <nav id="navScrollD" class="navScrollD">
+    <img src="Images/icon.png" class="iconMenu">
+    <ul class="navMenuScrollD"> <!--Menu -->
+          <a href="#"><li class="menuTextScrollD">INICIO</li></a>
+          <a href="quemsomos.html"><li class="menuTextScrollD">QUEM SOMOS</li></a>
+          <a href="galeria.html"><li class="menuTextScrollD">GALERIA</li></a>
+          <a href="produtos.html"><li class="menuTextScrollD">PRODUTOS</li></a>
+          <a href="contatos.html"><li class="menuTextScrollD">CONTATOS</li></a>
+          <a href="marcas.html"><li class="menuTextScrollD">MARCAS</li></a>
+          <a href="associados.html"><li class="menuTextScrollD">ASSOCIADOS</li></a>
+        </ul>
+        <div class="searchBarnMGScrollD">
+          <input type="text" class="searchBarScrollD" id="searchBarScrollD" placeholder="Procurar...">
+          <a onclick="" id="searchMGSearchScrollD"><i class="fas fa-search searchMGSearchScrollD"></i></a>
+        </div>
+  </nav>
     <div class="main">
       <br>
       <br>
@@ -112,7 +90,6 @@
       <br>
       <br>
     </div>
-  </div>
 </body>
 <footer class="footerBottom">
   <!--Footer-->
@@ -145,5 +122,4 @@
     </div>
   </div>
 </footer>
-
 </html>
