--- a/contatos.html
+++ b/contatos.html
@@ -58,7 +58,7 @@
   <nav id="nav" class="nav">
     <ul class="navMenu">
       <!--Menu-->
-      <a href="#">
+      <a href="index.html">
         <li class="menuText" id="op1">INICIO</li>
       </a>
       <a href="quemsomos.html">
@@ -70,7 +70,7 @@
       <a href="produtos.html">
         <li class="menuText" id="op4">PRODUTOS</li>
       </a>
-      <a href="contatos.html">
+      <a href="#">
         <li class="menuText" id="op5">CONTATOS</li>
       </a>
       <a href="marcas.html">
@@ -85,7 +85,7 @@
     <img src="Images/icon.png" class="iconMenu">
     <ul class="navMenuScrollD">
       <!--Menu -->
-      <a href="#">
+      <a href="index.html">
         <li class="menuTextScrollD">INICIO</li>
       </a>
       <a href="quemsomos.html">
@@ -97,7 +97,7 @@
       <a href="produtos.html">
         <li class="menuTextScrollD">PRODUTOS</li>
       </a>
-      <a href="contatos.html">
+      <a href="#">
         <li class="menuTextScrollD">CONTATOS</li>
       </a>
       <a href="marcas.html">
