--- a/produtos.html
+++ b/produtos.html
@@ -41,10 +41,10 @@
   <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Top Button Phone Mode-->
   <nav id="nav" class="nav">
     <ul class="navMenu"> <!--Menu-->
-      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
-      <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
+      <a href="#"><li class="menuText" id="op4">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
@@ -53,10 +53,10 @@
   <nav id="navScrollD" class="navScrollD">
     <img src="Images/icon.png" class="iconMenu">
     <ul class="navMenuScrollD"> <!--Menu -->
-          <a href="#"><li class="menuTextScrollD">INICIO</li></a>
+          <a href="index.html"><li class="menuTextScrollD">INICIO</li></a>
           <a href="quemsomos.html"><li class="menuTextScrollD">QUEM SOMOS</li></a>
           <a href="galeria.html"><li class="menuTextScrollD">GALERIA</li></a>
-          <a href="produtos.html"><li class="menuTextScrollD">PRODUTOS</li></a>
+          <a href="#"><li class="menuTextScrollD">PRODUTOS</li></a>
           <a href="contatos.html"><li class="menuTextScrollD">CONTATOS</li></a>
           <a href="marcas.html"><li class="menuTextScrollD">MARCAS</li></a>
           <a href="associados.html"><li class="menuTextScrollD">ASSOCIADOS</li></a>
