--- a/quemsomos.html
+++ b/quemsomos.html
@@ -40,8 +40,8 @@
   <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Top Button Phone Mode-->
   <nav id="nav" class="nav">
     <ul class="navMenu"> <!--Menu-->
-      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
-      <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
+      <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="#"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
@@ -52,8 +52,8 @@
   <nav id="navScrollD" class="navScrollD">
     <img src="Images/icon.png" class="iconMenu">
     <ul class="navMenuScrollD"> <!--Menu -->
-          <a href="#"><li class="menuTextScrollD">INICIO</li></a>
-          <a href="quemsomos.html"><li class="menuTextScrollD">QUEM SOMOS</li></a>
+          <a href="index.html"><li class="menuTextScrollD">INICIO</li></a>
+          <a href="#"><li class="menuTextScrollD">QUEM SOMOS</li></a>
           <a href="galeria.html"><li class="menuTextScrollD">GALERIA</li></a>
           <a href="produtos.html"><li class="menuTextScrollD">PRODUTOS</li></a>
           <a href="contatos.html"><li class="menuTextScrollD">CONTATOS</li></a>
