--- a/contatos.html
+++ b/contatos.html
@@ -127,7 +127,7 @@
     <br>
     <p class="tittleContacts">FALE CONNOSCO</p>
     <br>
-    <p class="introContatcs">Utilize o seguinte formulÃ¡rio para colocar as suas dÃºvidas, opiniÃµes e sugestÃµes</p>
+    <p class="introContatcs">Utilize o seguinte formulário para colocar as suas dúvidas, opiniões e sugestões</p>
     <br>
     <div class="formContacts">
       <form method="post">
@@ -167,7 +167,7 @@
           <br>
           <textarea placeholder="Mensagem" class="inputs inputMessage" required></textarea>
         </div>
-        <p class="textContatosI">*ObrigatÃ³rio preencher</p>
+        <p class="textContatosI">*Obrigatório preencher</p>
         <br>
         <button type="submit" class="button btnSend">Enviar</button>
         <button type="reset" class="button btnClean">Limpar</button>
@@ -180,35 +180,28 @@
   </div>
   <!--/Main-->
 </body>
-<footer class="footerBottom">
-  <!--Footer-->
+<footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
-    <p>
-    <p class="tittleFooter">ONDE NOS ENCONTRAR</p><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
+    <p><p class="tittleFooter">ONDE NOS ENCONTRAR</p><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
   </div>
   <div class="contactusFooter">
-    <p>
-    <p class="tittleFooter">CONTATOS GERAIS</p><br>243 700 240<br>243 700 249</p>
+    <p><p class="tittleFooter">CONTATOS GERAIS</p><br>243 700 240<br>243 700 249</p>
   </div>
   <div class="openFooterD">
     <div class="openFooter">
-      <p>
-      <p class="tittleFooter">ATENDIMENTO</p><br>Segunda a Sexta-feira:<br>9h-13h /
-      14:30h-18:30h<br><br>SÃ¡bados:<br>9h-12:30H</p>
+      <p><p class="tittleFooter">ATENDIMENTO</p><br>Segunda a Sexta-feira:<br>9h-13h / 14:30h-18:30h<br><br>Sábados:<br>9h-12:30H</p>
     </div>
-  </div>
+</div>
   <div class="suporteFooter">
-    <p>
-    <p class="tittleFooter">SUPORTE</p><br>QuestÃµes Frequentes<br><a href="contatos.html">Contatos</a></p><a
-      href="https://www.livroreclamacoes.pt/inicio"><img src="Images/rb.png" class="livrodereclamacoes"></a>
+    <p><p class="tittleFooter">SUPORTE</p><br>Questões Frequentes<br><a href="contatos.html">Contatos</a></p><a href="https://www.livroreclamacoes.pt/inicio"><img src="Images/rb.png" class="livrodereclamacoes"></a>
   </div>
   <div class="CDfooter">
     <div class="copyright">
-      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-PecuÃ¡ria do Cartaxo, C.R.L.</p>
+      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
     </div>
     <div class="desendesign">
       <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-    </div>
+    </div> 
   </div>
 </footer>
 
