--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="JS/script.js"></script>
       <title>Lavricartaxo</title>
   </head>
-<body onload="slideshow();fixPhoneMenu()" onresize="resize()" onscroll="scrollFunction();fixPhoneMenu()">
+<body onload="slideshow()" onresize="resize()" onscroll="scrollFunction()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
       <div class="logo"> <!--Div logo-->
