--- a/quemsomos.html
+++ b/quemsomos.html
@@ -50,23 +50,23 @@
     </ul>
   </nav>
   <nav id="navScrollD" class="navScrollD">
-    <img src="Images/icon.png" class="iconMenu">
-    <ul class="navMenuScrollD"> <!--Menu -->
-          <a href="index.html"><li class="menuTextScrollD">INICIO</li></a>
-          <a href="#"><li class="menuTextScrollD">QUEM SOMOS</li></a>
-          <a href="galeria.html"><li class="menuTextScrollD">GALERIA</li></a>
-          <a href="produtos.html"><li class="menuTextScrollD">PRODUTOS</li></a>
-          <a href="contatos.html"><li class="menuTextScrollD">CONTATOS</li></a>
-          <a href="marcas.html"><li class="menuTextScrollD">MARCAS</li></a>
-          <a href="associados.html"><li class="menuTextScrollD">ASSOCIADOS</li></a>
-        </ul>
-        <div class="searchBarnMGScrollD">
-          <input type="text" class="searchBarScrollD" id="searchBarScrollD" placeholder="Procurar...">
-          <a onclick="" id="searchMGSearchScrollD"><i class="fas fa-search searchMGSearchScrollD"></i></a>
-        </div>
+    <img src="Images/icon.png" class="iconMenu" id="iconMenu">
+    <ul class="navMenuScrollD" id="navMenuScrollD"> <!--Menu -->
+          <a href="index.html"><li class="menuTextScrollD"  id="ops1">INICIO</li></a>
+          <a href="#"><li class="menuTextScrollD" id="ops2">QUEM SOMOS</li></a>
+          <a href="galeria.html"><li class="menuTextScrollD" id="ops3">GALERIA</li></a>
+          <a href="produtos.html"><li class="menuTextScrollD" id="ops4">PRODUTOS</li></a>
+          <a href="contatos.html"><li class="menuTextScrollD" id="ops5">CONTATOS</li></a>
+          <a href="marcas.html"><li class="menuTextScrollD" id="ops6">MARCAS</li></a>
+          <a href="associados.html"><li class="menuTextScrollD" id="ops7">ASSOCIADOS</li></a>
+    </ul>
+    <div class="searchBarnMGScrollD">
+      <input type="text" class="searchBarScrollD" id="searchBarScrollD" placeholder="Procurar...">
+      <a onclick="" id="searchMGSearchScrollD"><i class="fas fa-search searchMGSearchScrollD"></i></a>
+    </div>
   </nav>
   <div class="main">
-    <div class="welcome">
+    <div class="welcome w100">
       </br><h1>Quem Somos</h1>
       </br>Constituída em 1982 e sediada na cidade do Cartaxo, a LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L. (antigo Grémio da Lavoura) é uma entidade com estatuto jurídico de cooperativa agrícola, composta por vários associados que procuraram criar uma estrutura forte e competitiva no sector da comercialização de produtos para a agricultura.
       </br></br>Apresentamos soluções para uma vasta franja do sector, nomeadamente: Adubos, Agro-Químicos, Produtos Fitofarmacêuticos, Rações, Máquinas, entre outros.
