--- a/contatos.html
+++ b/contatos.html
@@ -82,30 +82,15 @@
     </ul>
   </nav>
   <nav id="navScrollD" class="navScrollD">
-    <img src="Images/icon.png" class="iconMenu">
-    <ul class="navMenuScrollD">
-      <!--Menu -->
-      <a href="index.html">
-        <li class="menuTextScrollD">INICIO</li>
-      </a>
-      <a href="quemsomos.html">
-        <li class="menuTextScrollD">QUEM SOMOS</li>
-      </a>
-      <a href="galeria.html">
-        <li class="menuTextScrollD">GALERIA</li>
-      </a>
-      <a href="produtos.html">
-        <li class="menuTextScrollD">PRODUTOS</li>
-      </a>
-      <a href="#">
-        <li class="menuTextScrollD">CONTATOS</li>
-      </a>
-      <a href="marcas.html">
-        <li class="menuTextScrollD">MARCAS</li>
-      </a>
-      <a href="associados.html">
-        <li class="menuTextScrollD">ASSOCIADOS</li>
-      </a>
+    <img src="Images/icon.png" class="iconMenu" id="iconMenu">
+    <ul class="navMenuScrollD" id="navMenuScrollD"> <!--Menu -->
+          <a href="index.html"><li class="menuTextScrollD"  id="ops1">INICIO</li></a>
+          <a href="quemsomos.html"><li class="menuTextScrollD" id="ops2">QUEM SOMOS</li></a>
+          <a href="galeria.html"><li class="menuTextScrollD" id="ops3">GALERIA</li></a>
+          <a href="produtos.html"><li class="menuTextScrollD" id="ops4">PRODUTOS</li></a>
+          <a href="#"><li class="menuTextScrollD" id="ops5">CONTATOS</li></a>
+          <a href="marcas.html"><li class="menuTextScrollD" id="ops6">MARCAS</li></a>
+          <a href="associados.html"><li class="menuTextScrollD" id="ops7">ASSOCIADOS</li></a>
     </ul>
     <div class="searchBarnMGScrollD">
       <input type="text" class="searchBarScrollD" id="searchBarScrollD" placeholder="Procurar...">
